--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,8 @@
 on : push
 jobs : 
-    first-job :
-        runs-on : ubuntu-latest
-        steps : 
-              - run : node --version
+  first-job :
+    runs-on : ubuntu-latest
+    steps :
+      - name : Check node version 
+        run : node --version 
+
